# tg_bot_giveaway

./: .env  README.md  pyproject.toml
bot/: config.py  logging.py  misc.py  states.py  utils.py
bot/filters/: __init__.py
bot/handlers/: __init__.py  _helpers.py  give_list.py  giveaway.py  last.py  log_report.py  main.py  member_export.py  post_templates_channel.py  winner.py
bot/keyboards/: __init__.py  btn.py  callbacks.py  main.py
bot/middlewares/: acl.py
bot/models/: __init__.py  db.py  giveaway.py  user.py
migrations/models/: 0_20230626165129_init.py
systemd/: giveaway_bot.service
